# Code-Paper-A-Pratical-Solver-for-Scalar-Data-Topological-Simplification

./: README.md  aneurism.tar.xz  install.sh
scripts/: computeL2DistanceBaselineApproach.py  computeL2DistanceOurSolver.py  computeLinfDistanceBaselineApproach.py  computeLinfDistanceOurSolver.py  getInformation.py  runBaselineOptimizationApproach.py  runOurSolver.py  runScripts.sh
ttk-dev/CMake/: config.cmake
ttk-dev/core/base/abstractTriangulation/: AbstractTriangulation.h
ttk-dev/core/base/boundingVolumeHierarchy/: BoundingVolumeHierarchy.h
ttk-dev/core/base/discreteGradient/: DiscreteGradient.cpp  DiscreteGradient.h  DiscreteGradient_Template.h
ttk-dev/core/base/discreteMorseSandwich/: DiscreteMorseSandwich.h
ttk-dev/core/base/explicitTriangulation/: ExplicitTriangulation.h
ttk-dev/core/base/implicitTriangulation/: ImplicitTriangulation.cpp  ImplicitTriangulation.h
ttk-dev/core/base/localizedSignedDistanceField/: CMakeLists.txt  LocalizedSignedDistanceField.h
ttk-dev/core/base/localizedTopologicalOptimization/: CMakeLists.txt  LocalizedTopologicalOptimization.h  Propagation.h
ttk-dev/core/base/morseSmaleComplex/: MorseSmaleComplex.h
ttk-dev/core/base/multiresTriangulation/: MultiresTriangulation.h
ttk-dev/core/base/persistenceDiagram/: PersistenceDiagram.h  PersistenceDiagramUtils.h
ttk-dev/core/base/persistenceDiagramClustering/: PDBarycenter.h  (+6 more)
ttk-dev/core/base/topologicalOptimization/: CMakeLists.txt  TopologicalOptimization.cpp  TopologicalOptimization.h
ttk-dev/paraview/xmls/: SignedDistanceField.xml  TopologicalOptimization.xml
(+19 files in other folders)
